--- a/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.scss
@@ -1,3 +1,89 @@
-.container-settings{
-    
+.container-settings {
+    &__header-title {
+        height: 68px;
+        font-family: Poppins;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 1.2rem;
+        line-height: 1.2rem;
+        display: flex;
+        align-items: center;
+        letter-spacing: 0.15px;
+        color: #000000;
+        margin-left: 3.8%;
+    }
+    &__color-expantion {
+        background: #ffffff;
+        border: 1px solid #d8d8d8;
+        box-sizing: border-box;
+        box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+    }
+    &__btn-add {
+        border: 1px #6200ee solid;
+        color: #6200ee;
+        margin-left: 10px;
+        padding: 0px 30px 0px 30px;
+    }
+    &__btn-save {
+        margin-left: 10px;
+        border: 1px #6200ee solid;
+        background: #6200ee;
+        color: white;
+        padding: 0px 30px 0px 30px;
+    }
+    &__filter {
+        display: flex;
+        justify-content: center;
+    }
 }
+
+.container-expansion {
+    width: 100%;
+    background: #ffffff;
+    border: 1px solid #f1eeee;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.mat-expansion-panel-header:not([aria-disabled="true"]) {
+    margin-bottom: 4px;
+    box-sizing: border-box;
+    box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+
+table {
+    width: 100%;
+    overflow: hidden;
+}
+
+th {
+    background: #f0eefc;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.15px;
+    color: #2b2b2b;
+}
+td {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+    color: #000000;
+}
+
+mat-accordion .mat-expansion-panel {
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
