🎨 add andon dashboard

--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -158,7 +158,7 @@
                 Reportar
               </span>
             </a>
-            <a mat-list-item class="mat-list-item-second" [routerLink]="['/main/andon-bashboard']" routerLinkActive="active"
+            <a mat-list-item class="mat-list-item-second" [routerLink]="['/main/dashboard']" routerLinkActive="active"
               (click)="drawer.toggle()">
               <mat-icon mat-list-icon class="mat-icon-menu">dashboard</mat-icon>
               <span class="mat-item-list-span">
