--- a/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.html
+++ b/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.html
@@ -12,7 +12,8 @@
                         <span>
                             Lista de correos
                         </span>
-                        <button type="file" aria-label="add" mat-button class="container-settings__btn-add">
+                        <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".xls,.xlsx" id="fileInput2">
+                        <button aria-label="add" mat-button class="container-settings__btn-add" accept=".xls,.xlsx" (click)="fileInput2.click()">
                             <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
                             SUBIR ARCHIVO
                         </button>
