--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
@@ -20,6 +20,7 @@
         <p><span style="font-weight: bold;"> OT CHILD :</span> {{data.otChild ? data.otChild : ''}}</p>
         <p><span style="font-weight: bold;"> Correlativo :</span> {{data.position ? data.position : ''}}</p>
         <p><span style="font-weight: bold;"> N° de parte :</span> {{data.partNumber ? data.partNumber : ''}}</p>
+        <p><span style="font-weight: bold;"> Cantidad :</span> {{data.quantity ? data.quantity : ''}}</p>
         <p><span style="font-weight: bold;"> Descripcion :</span> {{data.description ? data.description : ''}}</p>
         <p><span style="font-weight: bold;"> Tipo de Atencion :</span> {{data.status ? data.status : ''}}</p>
         <p><span style="font-weight: bold;"> Usuario :</span> {{data.createdBy.name ? data.createdBy.name :
@@ -52,7 +53,9 @@
             </div>
 
             <div *ngFor="let img of images;let i=index;">
-                <img [src]="img" alt="" onError="this.src='../../../../../../../assets/img/error-image.png'">
+                <a [href]="img" target="_blank" style="cursor: zoom-in">
+                    <img [src]="img" *ngIf="img">
+                </a>
             </div>
 
 
@@ -75,8 +78,9 @@
         </form>
     </mat-dialog-content>
     <mat-dialog-actions align="end">
-        <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
+        <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close
+            [disabled]="loading$ | async">CERRAR</button>
         <button type="submit" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial
-            (click)="onSubmit()">GUARDAR</button>
+            (click)="onSubmit()" [disabled]="loading$ | async">GUARDAR</button>
     </mat-dialog-actions>
 </div>
