--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-response-dialog/evaluations-response-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-response-dialog/evaluations-response-dialog.component.html
@@ -8,7 +8,7 @@
                     Responder
                 </span>
             </button>
-            <button mat-icon-button mat-dialog-close>
+            <button mat-icon-button mat-dialog-close [disabled]="loading$ | async">
                 <mat-icon class="container-h2__icon-close">close</mat-icon>
             </button>
         </div>
@@ -20,6 +20,7 @@
         <p><span style="font-weight: bold;"> OT CHILD :</span> {{data.otChild ? data.otChild : ''}}</p>
         <p><span style="font-weight: bold;"> Correlativo :</span> {{data.position ? data.position : ''}}</p>
         <p><span style="font-weight: bold;"> N° de parte :</span> {{data.partNumber ? data.partNumber : ''}}</p>
+        <p><span style="font-weight: bold;"> Cantidad :</span> {{data.quantity ? data.quantity : ''}}</p>
         <p><span style="font-weight: bold;"> Descripcion :</span> {{data.description ? data.description : ''}}</p>
         <p><span style="font-weight: bold;"> Tipo de Atencion :</span> {{data.status ? data.status : ''}}</p>
         <p><span style="font-weight: bold;"> Usuario :</span> {{data.createdBy.name ? data.createdBy.name :
@@ -43,7 +44,9 @@
             <mat-list-item role="listitem" class="item-question">{{inquiry.inquiry}}
             </mat-list-item>
             <div class="container-h2__image">
-                <img [src]="inquiry.inquiryImage" alt="inquiry image" style="width: 100%" class="mat-elevation-z4">
+                <a [href]="inquiry.inquiryImage" target="_blank" style="cursor: zoom-in">
+                    <img [src]="inquiry.inquiryImage" style="width: 100%" class="mat-elevation-z4" *ngIf="inquiry.inquiryImage">
+                </a>
             </div>
         </ng-container>
 
@@ -79,8 +82,8 @@
 
     </mat-dialog-content>
     <mat-dialog-actions align="end">
-        <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
+        <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close [disabled]="loading$ | async">CERRAR</button>
         <button type="button" mat-raised-button color="primary" class="footer__btn-save"
-        (click)="onSubmit()">GUARDAR</button>
+        (click)="onSubmit()" [disabled]="loading$ | async">GUARDAR</button>
     </mat-dialog-actions>
 </div>
