--- a/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-observation-dialog/requests-observation-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-observation-dialog/requests-observation-dialog.component.html
@@ -17,6 +17,7 @@
             <p><span style="font-weight: bold;"> OT CHILD :</span> {{data.otChild ? data.otChild : ''}}</p>
             <p><span style="font-weight: bold;"> Correlativo :</span> {{data.position ? data.position : ''}}</p>
             <p><span style="font-weight: bold;"> N° de parte :</span> {{data.partNumber ? data.partNumber : ''}}</p>
+            <p><span style="font-weight: bold;"> Cantidad :</span> {{data.quantity ? data.quantity : ''}}</p>
             <p><span style="font-weight: bold;"> Descripcion :</span> {{data.description ? data.description : ''}}</p>
             <p><span style="font-weight: bold;"> Tipo de Atencion :</span> {{data.status ? data.status : ''}}</p>
             <p><span style="font-weight: bold;"> Usuario :</span> {{data.createdBy ? data.createdBy : ''}} </p>
