--- a/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-observation-dialog/requests-observation-dialog.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-observation-dialog/requests-observation-dialog.component.scss
@@ -14,8 +14,9 @@
         margin: 0px 0px;
     }
 
-    &__icon-close {
+    &__icon {
         color: gray;
+        margin-right: 1rem;
     }
 }
 
