--- a/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-start-dialog/requests-start-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/dialogs/requests-start-dialog/requests-start-dialog.component.html
@@ -1,22 +1,22 @@
 <div class="container">
-    
-    <h2 mat-dialog-title style="display: flex; padding-bottom: 0px;margin-bottom: 0px;">
-        <div style="margin-top: 5px; margin-right: 15px;" mat-dialog-close>
-            <mat-icon mat-list-icon>play_circle_outline</mat-icon>
-        </div> 
-        Iniciar proceso 
-        <div  mat-dialog-close style="margin-top: 5px; margin-left: 160px;cursor: pointer;"  >
-            <mat-icon >clear</mat-icon>
-        </div>        
-    </h2>
-        <mat-divider></mat-divider>
-        <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>    
-        <mat-dialog-content style="margin-top: 20px;" >
-            <p style="text-align: center;">Esta seguro de inciar el proceso PPM para la OT - {{data.otMain}}</p>          
-        </mat-dialog-content>
-        <mat-dialog-actions align="end">
-            <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-            <button type="button" mat-raised-button color="primary" class="footer__btn-save" (click)="save()">GUARDAR</button>
-        </mat-dialog-actions>
-</div> 
-
+    <div mat-dialog-title class="header">
+        <mat-icon class="header__icon">play_circle_outline</mat-icon>
+        <h3 class="header__title">
+            Iniciar proceso
+        </h3>
+        <span class="ms-fill"></span>
+        <button mat-icon-button mat-dialog-close>
+            <mat-icon class="header__icon">close</mat-icon>
+        </button>
+    </div>
+    <mat-divider></mat-divider>
+    <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+    <mat-dialog-content style="margin-top: 20px;">
+        <p style="text-align: center;">Esta seguro de inciar el proceso PPM para la OT - {{data.otMain}}</p>
+    </mat-dialog-content>
+    <mat-dialog-actions align="end">
+        <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
+        <button type="button" mat-raised-button color="primary" class="footer__btn-save"
+            (click)="save()">GUARDAR</button>
+    </mat-dialog-actions>
+</div>
