--- a/src/app/main/pages/reports/reports.component.html
+++ b/src/app/main/pages/reports/reports.component.html
@@ -22,10 +22,10 @@
                 </h3>
                 <div class="cards__header--menu">
                     <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="editDialog()"
+                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
                         >
-                        <mat-icon>edit</mat-icon>
-                        Editar
+                        <mat-icon>remove_red_eye</mat-icon>
+                        Detalle
                       </button>
                       <button class="w3-small" mat-menu-item (click)="deleteDialog()"
                         >
@@ -44,10 +44,11 @@
                 <div class="cards__body--round">
                 </div> 
                 <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies">INSUMOS</button>              
-                <button class="cards__body--return">RETOMAR</button>       
+                <button class="cards__body--supplies" >INSUMOS</button>              
+                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
             </div>
         </div>
+        
         <div class="cards">
             <div class="cards__header">
                 <h3 class="cards__header--title">
@@ -55,10 +56,10 @@
                 </h3>
                 <div class="cards__header--menu">
                     <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="editDialog()"
+                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
                         >
-                        <mat-icon>edit</mat-icon>
-                        Editar
+                        <mat-icon>remove_red_eye</mat-icon>
+                        Detalle
                       </button>
                       <button class="w3-small" mat-menu-item (click)="deleteDialog()"
                         >
@@ -77,10 +78,11 @@
                 <div class="cards__body--round">
                 </div> 
                 <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies">INSUMOS</button>              
-                <button class="cards__body--return">RETOMAR</button>       
+                <button class="cards__body--supplies" >INSUMOS</button>              
+                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
             </div>
         </div>
+        
         <div class="cards">
             <div class="cards__header">
                 <h3 class="cards__header--title">
@@ -88,10 +90,10 @@
                 </h3>
                 <div class="cards__header--menu">
                     <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="editDialog()"
+                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
                         >
-                        <mat-icon>edit</mat-icon>
-                        Editar
+                        <mat-icon>remove_red_eye</mat-icon>
+                        Detalle
                       </button>
                       <button class="w3-small" mat-menu-item (click)="deleteDialog()"
                         >
@@ -110,10 +112,11 @@
                 <div class="cards__body--round">
                 </div> 
                 <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies">INSUMOS</button>              
-                <button class="cards__body--return">RETOMAR</button>       
+                <button class="cards__body--supplies" >INSUMOS</button>              
+                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
             </div>
         </div>
+        
         <div class="cards">
             <div class="cards__header">
                 <h3 class="cards__header--title">
@@ -121,10 +124,10 @@
                 </h3>
                 <div class="cards__header--menu">
                     <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="editDialog()"
+                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
                         >
-                        <mat-icon>edit</mat-icon>
-                        Editar
+                        <mat-icon>remove_red_eye</mat-icon>
+                        Detalle
                       </button>
                       <button class="w3-small" mat-menu-item (click)="deleteDialog()"
                         >
@@ -143,10 +146,11 @@
                 <div class="cards__body--round">
                 </div> 
                 <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies">INSUMOS</button>              
-                <button class="cards__body--return">RETOMAR</button>       
+                <button class="cards__body--supplies" >INSUMOS</button>              
+                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
             </div>
         </div>
+        
         <div class="cards">
             <div class="cards__header">
                 <h3 class="cards__header--title">
@@ -154,10 +158,10 @@
                 </h3>
                 <div class="cards__header--menu">
                     <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="editDialog()"
+                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
                         >
-                        <mat-icon>edit</mat-icon>
-                        Editar
+                        <mat-icon>remove_red_eye</mat-icon>
+                        Detalle
                       </button>
                       <button class="w3-small" mat-menu-item (click)="deleteDialog()"
                         >
@@ -176,10 +180,11 @@
                 <div class="cards__body--round">
                 </div> 
                 <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies">INSUMOS</button>              
-                <button class="cards__body--return">RETOMAR</button>       
+                <button class="cards__body--supplies" >INSUMOS</button>              
+                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
             </div>
         </div>
+        
         <div class="cards">
             <div class="cards__header">
                 <h3 class="cards__header--title">
@@ -187,10 +192,10 @@
                 </h3>
                 <div class="cards__header--menu">
                     <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="editDialog()"
+                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
                         >
-                        <mat-icon>edit</mat-icon>
-                        Editar
+                        <mat-icon>remove_red_eye</mat-icon>
+                        Detalle
                       </button>
                       <button class="w3-small" mat-menu-item (click)="deleteDialog()"
                         >
@@ -209,10 +214,11 @@
                 <div class="cards__body--round">
                 </div> 
                 <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies">INSUMOS</button>              
-                <button class="cards__body--return">RETOMAR</button>       
+                <button class="cards__body--supplies" >INSUMOS</button>              
+                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
             </div>
         </div>
+        
         <div class="cards">
             <div class="cards__header">
                 <h3 class="cards__header--title">
@@ -220,10 +226,10 @@
                 </h3>
                 <div class="cards__header--menu">
                     <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="editDialog()"
+                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
                         >
-                        <mat-icon>edit</mat-icon>
-                        Editar
+                        <mat-icon>remove_red_eye</mat-icon>
+                        Detalle
                       </button>
                       <button class="w3-small" mat-menu-item (click)="deleteDialog()"
                         >
@@ -242,10 +248,11 @@
                 <div class="cards__body--round">
                 </div> 
                 <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies">INSUMOS</button>              
-                <button class="cards__body--return">RETOMAR</button>       
+                <button class="cards__body--supplies" >INSUMOS</button>              
+                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
             </div>
         </div>
+        
         <div class="cards">
             <div class="cards__header">
                 <h3 class="cards__header--title">
@@ -253,10 +260,10 @@
                 </h3>
                 <div class="cards__header--menu">
                     <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="editDialog()"
+                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
                         >
-                        <mat-icon>edit</mat-icon>
-                        Editar
+                        <mat-icon>remove_red_eye</mat-icon>
+                        Detalle
                       </button>
                       <button class="w3-small" mat-menu-item (click)="deleteDialog()"
                         >
@@ -275,10 +282,11 @@
                 <div class="cards__body--round">
                 </div> 
                 <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies">INSUMOS</button>              
-                <button class="cards__body--return">RETOMAR</button>       
+                <button class="cards__body--supplies" >INSUMOS</button>              
+                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
             </div>
         </div>
+        
         <div class="cards">
             <div class="cards__header">
                 <h3 class="cards__header--title">
@@ -286,10 +294,10 @@
                 </h3>
                 <div class="cards__header--menu">
                     <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="editDialog()"
+                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
                         >
-                        <mat-icon>edit</mat-icon>
-                        Editar
+                        <mat-icon>remove_red_eye</mat-icon>
+                        Detalle
                       </button>
                       <button class="w3-small" mat-menu-item (click)="deleteDialog()"
                         >
@@ -308,10 +316,11 @@
                 <div class="cards__body--round">
                 </div> 
                 <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies">INSUMOS</button>              
-                <button class="cards__body--return">RETOMAR</button>       
+                <button class="cards__body--supplies" >INSUMOS</button>              
+                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
             </div>
         </div>
+        
         <div class="cards">
             <div class="cards__header">
                 <h3 class="cards__header--title">
@@ -319,10 +328,10 @@
                 </h3>
                 <div class="cards__header--menu">
                     <mat-menu #rawMenu="matMenu">
-                      <button class="w3-small" mat-menu-item (click)="editDialog()"
+                      <button class="w3-small" mat-menu-item (click)="detailsDialog()"
                         >
-                        <mat-icon>edit</mat-icon>
-                        Editar
+                        <mat-icon>remove_red_eye</mat-icon>
+                        Detalle
                       </button>
                       <button class="w3-small" mat-menu-item (click)="deleteDialog()"
                         >
@@ -341,10 +350,11 @@
                 <div class="cards__body--round">
                 </div> 
                 <h3 class="cards__body--timer"> 01:00:49</h3>
-                <button class="cards__body--supplies">INSUMOS</button>              
-                <button class="cards__body--return">RETOMAR</button>       
+                <button class="cards__body--supplies" >INSUMOS</button>              
+                <button class="cards__body--return" (click)="returnDialog()">RETOMAR</button>       
             </div>
         </div>
+        
         
     </div>
 </div>
