--- a/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.scss
@@ -45,7 +45,8 @@
     box-sizing: border-box;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    overflow: hidden;
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 .mat-expansion-panel-header:not([aria-disabled="true"]) {
@@ -57,7 +58,7 @@
 
 table {
     width: 100%;
-    overflow: hidden;
+    overflow: scroll;
 }
 
 th {
@@ -65,8 +66,8 @@ th {
     font-family: Roboto;
     font-style: normal;
     font-weight: bold;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 14px;
+    line-height: 14px;
     letter-spacing: 0.15px;
     color: #2b2b2b;
 }
@@ -74,8 +75,8 @@ td {
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 12px;
+    line-height: 12px;
     letter-spacing: 0.5px;
     color: #000000;
 }
@@ -87,3 +88,12 @@ mat-accordion .mat-expansion-panel {
     border-bottom-right-radius: 10px;
 }
 
+.mat-column-code {
+    flex: 0 0 5%;
+}
+.mat-column-code {
+    // flex: 0 0 10%;
+}
+// .mat-column-productName {
+//     flex: 0 0 50%;
+// }
