🎨 add andon history

--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -165,7 +165,7 @@
                 DashBoard
               </span>
             </a>
-            <a mat-list-item class="mat-list-item-second" [routerLink]="['/main/andon-history']"
+            <a mat-list-item class="mat-list-item-second" [routerLink]="['/main/andon-record']"
               routerLinkActive="active" (click)="drawer.toggle()">
               <mat-icon mat-list-icon class="mat-icon-menu">history</mat-icon>
               <span class="mat-item-list-span">
