--- a/src/app/main/pages/dashboard/dashboard.component.html
+++ b/src/app/main/pages/dashboard/dashboard.component.html
@@ -9,14 +9,10 @@
                 <h1 class="container1__problem--title" >
                     Reportes de tipo problema
                 </h1>
-                <div class="container1__problem--report">
-                    <p>Seguridad</p>
-                    <p>Insumos</p>
-                    <p>Calidad</p>
-                    <p>Maquinas</p>
-                    <p>Administrativo</p>
-                    <p>Soporte</p>
-                </div>
+                
+                <div class="charts">
+                    <canvas id="problem" width="400" height="200"></canvas>
+                  </div>
 
             </div>
             <div class="container1__top">
@@ -50,6 +46,17 @@
                         <td>12:34:01</td>
                     </tr>
                 </table>
+            </div>
+
+            <div class="container1__answer">
+                <h1 class="container1__answer--title" >
+                    Promedio tiempo de respuesta
+                </h1>
+                
+                <div class="charts">
+                    <canvas id="answer" width="400" height="200"></canvas>
+                  </div>
+
             </div>
         </div>
 
