🎨 add charts in dashboard andon

--- a/src/app/main/pages/dashboard/dashboard.component.scss
+++ b/src/app/main/pages/dashboard/dashboard.component.scss
@@ -51,6 +51,9 @@
         }
         &--table{
             margin: 30px;
+            margin-left: 50px;
+            padding-bottom: 30px;
+
         }
         
     }    
@@ -114,4 +117,8 @@
 
 .charts{
     margin: 20px;
+}
+
+.container-date{
+    margin-left: 30px;
 }
