--- a/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.html
+++ b/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.html
@@ -17,13 +17,13 @@
                             <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
                             SUBIR ARCHIVO
                         </button>
-                        <button type="file" aria-label="saveData" mat-button class="container-settings__btn-save" (click)="saveData()">
+                        <button type="file" aria-label="saveDataList" mat-button class="container-settings__btn-save" (click)="saveDataList()">
                             GUARDAR
                         </button>
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <div class="container-expansion">
+                    <div class="container-expansion1">
                         <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
                         <table mat-table [dataSource]="settingsDataSource" matSort>
 
@@ -76,10 +76,52 @@
                                 <td class="mat-cell" colspan="4">No hay ningun dato cargado</td>
                             </tr>
                         </table>
-                        <div style="margin-top: 10px;"></div>
+                        <!-- <div style="margin-top: 10px;"></div> -->
 
                         <mat-paginator #settingsPaginator [pageSizeOptions]="[5,10,15]"></mat-paginator>
                     </div>
+                    <mat-card class="mat-elevation-z0" style="margin-left: -10px;margin-top: 10px;">
+                        <mat-card-header>
+                            <mat-card-title>
+                                <span>
+                                    Lista de difusión
+                                </span>
+                                <button type="button" aria-label="saveDataDifusion" mat-button class="container-settings__btn-save">
+                                    GUARDAR
+                                </button>
+                            </mat-card-title>
+                        </mat-card-header>
+                    </mat-card>
+                    <mat-card class="mat-elevation-z0 container-expansion1__content-card">
+                        <mat-card-header class="container-expansion1__content-card--header">
+                            <mat-form-field>
+                                <mat-label>Escribir</mat-label>
+                                <input type="email" matInput placeholder="Escribir" [formControl]="listNotifyFormControl" (keyup.enter)="addDeleteListNotify('add')" [errorStateMatcher]="matcher">
+                                <button mat-button *ngIf="listNotifyFormControl.value" matSuffix mat-icon-button aria-label="clearMail" (click)="listNotifyFormControl.reset()">
+                                    <mat-icon>close</mat-icon>
+                                </button>
+                                <mat-hint>Presione ENTER para agregar</mat-hint>
+                                 <mat-error *ngIf="listNotifyFormControl.hasError('email') && !listNotifyFormControl.hasError('required')">
+                                    Por favor ingrese un correo valido
+                                </mat-error>
+                                <mat-error *ngIf="listNotifyFormControl.hasError('required')">
+                                    El correo electronico es <strong>Requerido</strong>
+                                </mat-error>
+                            </mat-form-field>
+                        </mat-card-header>
+                        <mat-card-content class="container-expansion1__content-card-content">
+                            <div role="list" *ngFor="let notify of listNotifyArray;let i=index">
+                                <div class="item-list">
+                                    <span>{{notify}}</span>
+                                    <span>
+                                        <button mat-icon-button color="primary" aria-label="deletelistNotify" (click)="addDeleteListNotify('delete')">
+                                            <mat-icon style="color: #828282">delete</mat-icon>
+                                        </button>
+                                    </span>
+                                </div>
+                            </div>
+                        </mat-card-content>
+                    </mat-card>
                 </mat-card-content>
             </mat-card>
         </mat-expansion-panel>
@@ -91,6 +133,49 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <div style="border: 10px;"></div>
+            <mat-card class="mat-elevation-z0">
+                <mat-card-content>
+                    <mat-card class="mat-elevation-z0" style="margin-left: -10px;margin-top: 10px;">
+                        <mat-card-header>
+                            <mat-card-title>
+                                <span>
+                                    Tipo de resultado
+                                </span>
+                                <button type="button" aria-label="saveDataDifusion" mat-button class="container-settings__btn-save">
+                                    GUARDAR
+                                </button>
+                            </mat-card-title>
+                        </mat-card-header>
+                    </mat-card>
+                    <mat-card class="mat-elevation-z0 container-expansion1__content-card">
+                        <mat-card-header class="container-expansion1__content-card--header">
+                            <mat-form-field>
+                                <mat-label>Escribir</mat-label>
+                                <input type="text" matInput placeholder="Escribir" [formControl]="listResultFormControl" (keyup.enter)="addDeleteListResult('add')" [errorStateMatcher]="matcher">
+                                <button mat-button *ngIf="listResultFormControl.value" matSuffix mat-icon-button aria-label="clearResult" (click)="listResultFormControl.reset()">
+                                    <mat-icon>close</mat-icon>
+                                </button>
+                                <mat-hint>Presione ENTER para agregar</mat-hint>
+                                <mat-error *ngIf="listResultFormControl.hasError('required')">
+                                    El campo es <strong>Requerido</strong>
+                                </mat-error>
+                            </mat-form-field>
+                        </mat-card-header>
+                        <mat-card-content class="container-expansion1__content-card-content">
+                            <div role="list" *ngFor="let notify of listResultArray;let i=index">
+                                <div class="item-list">
+                                    <span>{{notify}}</span>
+                                    <span>
+                                        <button mat-icon-button aria-label="deletelistResult" (click)="addDeleteListResult('delete')">
+                                            <mat-icon style="color: #828282">delete</mat-icon>
+                                        </button>
+                                    </span>
+                                </div>
+                            </div>
+                        </mat-card-content>
+                    </mat-card>                
+                </mat-card-content>
+            </mat-card>
         </mat-expansion-panel>
     </mat-accordion>
 </div>
