--- a/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.scss
@@ -38,7 +38,7 @@
     }
 }
 
-.container-expansion {
+.container-expansion1 {
     width: 100%;
     background: #ffffff;
     border: 1px solid #f1eeee;
@@ -47,6 +47,24 @@
     border-radius: 10px;
     overflow-x: scroll;
     overflow-y: hidden;
+    &__content-card {
+        width: 400px;
+        height: 246px;
+        background: #ffffff;
+        border: 1px solid #f1eeee;
+        box-sizing: border-box;
+        box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+        overflow: hidden;
+        overflow-y: scroll;
+        &--header {
+            display: flex;
+            flex-direction: column;
+        }
+    }
+    &__content-card-content {
+        margin-bottom: 20px;
+    }
 }
 
 .mat-expansion-panel-header:not([aria-disabled="true"]) {
@@ -88,12 +106,21 @@ mat-accordion .mat-expansion-panel {
     border-bottom-right-radius: 10px;
 }
 
-.mat-column-code {
-    flex: 0 0 5%;
+.item-list {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 24px;
+    /* or 200% */
+
+    letter-spacing: 0.5px;
+
+    color: #828282;
 }
-.mat-column-code {
-    // flex: 0 0 10%;
-}
-// .mat-column-productName {
-//     flex: 0 0 50%;
-// }
