🎨 add report in andon

--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -151,7 +151,7 @@
         </mat-expansion-panel-header>
         <mat-nav-list>
           <div>
-            <a mat-list-item class="mat-list-item-second" [routerLink]="['/main/andon-reports']"
+            <a mat-list-item class="mat-list-item-second" [routerLink]="['/main/report']"
               routerLinkActive="active" (click)="drawer.toggle()">
               <mat-icon mat-list-icon class="mat-icon-menu">radio_button_checked</mat-icon>
               <span class="mat-item-list-span">
