--- a/src/app/main/pages/dashboard/dashboard.component.html
+++ b/src/app/main/pages/dashboard/dashboard.component.html
@@ -82,7 +82,7 @@
                     Reporte por taller
                 </h1>
                 <div class="container2__taller--cards">
-                    <div class="container2__taller--cards-card">
+                    <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
                             <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
@@ -91,7 +91,7 @@
                         </div>
                         <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
                     </div>
-                    <div class="container2__taller--cards-card">
+                    <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
                             <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
@@ -100,7 +100,7 @@
                         </div>
                         <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
                     </div>
-                    <div class="container2__taller--cards-card">
+                    <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
                             <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
@@ -109,7 +109,7 @@
                         </div>
                         <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
                     </div>
-                    <div class="container2__taller--cards-card">
+                    <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
                             <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
@@ -118,7 +118,7 @@
                         </div>
                         <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
                     </div>
-                    <div class="container2__taller--cards-card">
+                    <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
                             <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
@@ -127,7 +127,7 @@
                         </div>
                         <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
                     </div>
-                    <div class="container2__taller--cards-card">
+                    <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
                             <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
@@ -136,7 +136,7 @@
                         </div>
                         <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
                     </div>
-                    <div class="container2__taller--cards-card">
+                    <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
                             <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
@@ -145,7 +145,7 @@
                         </div>
                         <h1 style="font-weight: 700; text-align: center; font-size: 7em; margin-top: 30px;">10</h1>
                     </div>
-                    <div class="container2__taller--cards-card">
+                    <div class="container2__taller--cards-card" (click)="reports()">
                         <div style="display: flex; text-align: center; margin: 20px 15px 10px 15px;">
                             <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 1.5em;margin-top: 1px;">domain</mat-icon>
                             <p style="font-family: 'Poppins', sans-serif; font-size: 1.5em;">
