--- a/src/app/main/pages/dashboard/dashboard.component.scss
+++ b/src/app/main/pages/dashboard/dashboard.component.scss
@@ -108,6 +108,7 @@
                 background: #F2C94C;
                 border-radius: 30px;
                 height: 170px;
+                cursor: pointer;
             }
 
         }
