--- a/src/app/main/pages/reports/reports.component.html
+++ b/src/app/main/pages/reports/reports.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="header-container">
-        <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">arrow_back</mat-icon>
+        <mat-icon mat-list-icon class="mat-icon-menu" style="cursor: pointer; font-size: 2.5em;"
+         (click)="dashboard()">arrow_back</mat-icon>
         <h1 style="font-size: 2.2em; margin-left: 20px; font-family: 'Poppins', sans-serif; font-weight: 700;">REPORTES</h1> 
         
         <div class="header-container__search" >
@@ -8,14 +9,14 @@
               <mat-icon>search</mat-icon>
             </button>
             <form [formGroup]="searchForm" style="text-align: center;margin-top:10px ;">
-              <input matInput placeholder="Buscar" name="search" class="header-container__search--input" formControlName="ot" />
+              <input matInput placeholder="Buscar" name="search" class="header-container__search--input" formControlName="search" />
             </form>
         </div>       
     </div>
     <mat-divider></mat-divider>
     <div class="body-container">
 
-        <div class="cards">
+        <div class="cards" >
             <div class="cards__header">
                 <h3 class="cards__header--title">
                     Bahia 1
